.node_repl_history
clear
node --
node --v
node --version
version --
$npx create-react-app personal-porfolio
>
Uncaught SyntaxError: Unexpected identifier 'create'
    ^^^^^^
npx create-next-app@latest
> npx create-next-app@latest
Type ".help" for more information.
Welcome to Node.js v20.11.0.
npx create-next-app@latest
$npx create-next-app@latest
npx create-next-app@latest
projects $npx create-react-app personal-portfolio
clear
npx create-next-app@latest
 project $npx create-next-app@latest personal-portfolio
'.help'
".help"
¨.help
help